trivia/src/components/form/components/select/Select.scss
.select__label {
    font-size: .8rem;
    color: rgb(61, 61, 61);
    margin-bottom: .3rem;
}

.select__container {
    display: flex;
    align-items: center;
    justify-content: space-between;
    border: 1px solid black;
    width: 350px;
    padding: .1rem .7rem;
    cursor: pointer;

    &__selected__option {
        font-size: .9rem;
        padding: .3rem .5rem;
    }

    &__open__btn {
        border-bottom: 8px solid black;
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
    }

    &__close__btn {
        border-top: 8px solid black;
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
    }
}

.select__options__container {
    display: flex;
    flex-direction: column;
    gap: .5rem;
    height: 0px;
    width: 350px;
    visibility: hidden;
    background-color: white;
    position: absolute;
    overflow-y: scroll;
    transition: height .2s, visibility .2s;

    &__option {
        font-size: .8rem;
        padding: .5rem 1rem;
        background-color: white;
        color: black;
        transition: background-color .2s, color .2s;

        &:hover {
            cursor: pointer;
            background-color: black;
            color: white;
            transition: background-color .2s, color .2s;
        }
    }

    &__open {
        height: 110px;
        border: 1px solid rgb(45, 44, 44);
        border-top: none;
        overflow-y: scroll;
        visibility: visible;
        transition: height .2s, visibility .2s;
    }
}

